# g2o

g2o/examples/sba/: sba_demo.cpp
g2o/examples/sphere/: CMakeLists.txt  create_sphere.cpp
g2o/types/sba/: types_six_dof_expmap.cpp  types_six_dof_expmap.h
